--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
             <title>Information System for Barangay Centro 02</title>
             <link rel="stylesheet" href="style.css">
     </head>
-<body>
-    <div id="header">
-        <div class="container">
-            <nav>
-                <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="logo">
+    <body>
+        <div id="header">
+            <div class="container">
+                <nav>
+                 <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="logo"/>
                     <ul>
                         <li> <a href="#">Home</a></li>
                         <li> <a href="#">About Us</a></li>
@@ -19,50 +19,68 @@
                         <li> <a href="#">Contact</a></li>
                         <li> <a href="#">Log in</a></li>
                     </ul>
-            </nav>
+                </nav>
+            </div>
         </div>
-    </div>
 
-    <div id="about">
-    <div class="container">
-        <nav>
-            <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
-            <h1> BARANGAY CAPTAIN</h1>
+        <div class="wrapper">
+            <h1>Barangay Officials</h1>
+            <img class="img-cpt" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+            <h2>Carlo Jaynario</h2>
+            <h3>Punong Barangay</h3>
+        </div>
+
+        <div class="wrapper-2"> 
             <ul>
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
-
-                <br/>
-
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
-                <li>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="kagawad">
-                    <h2>BARANGAY KAGAWAD</h2>
-                </li>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Brayan</h3>
+                    <p>SB Member</p></li>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Salyn</h3>
+                    <p>SB Member</p></li>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Jason</h3>
+                    <p>SB Member</p></li>
             </ul>
-        </nav>
-      </div>
-    </div>
-</body>
+        </div>  
+
+        <div class="wrapper-3"> 
+            <ul>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Abel</h3>
+                    <p>SB Member</p></li>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Ken</h3>
+                    <p>SB Member</p></li>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Kevin</h3>
+                    <p>SB Member</p></li>
+                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                    <h3>Lans</h3>
+                    <p>SB Member</p></li>
+            </ul>
+        </div>
+
+        <div id="promotion">
+            <div class="row">
+                <div class="prom-col-1">
+                    <h4>Tourist Attraction</h4>
+                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                </div>
+                <div class="prom-col-2">
+                    <h4 class="sub-title">History</h4>
+                    <br/>
+                    <p>Prehistoric Times</p>
+                    <br/>
+                    <p>The history of humanity is a vast and complex narrative that spans thousands of years, encompassing the rise and fall of civilizations, advancements in technology, political shifts, cultural transformations, and countless human experiences. From the earliest known records, the journey of humankind is marked by both struggle and progress, as societies have evolved from primitive hunter-gatherer communities to the interconnected global civilization we know today.<p/>
+                    <br/>
+                    <p>The Agricultural Revolution</p>
+                    <br/>
+                    <p>The story begins in prehistory, a time before written records, where early humans survived through hunting, gathering, and simple tool-making. Archaeological evidence suggests that Homo sapiens, our direct ancestors, first appeared in Africa over 300,000 years ago. During the Paleolithic era, early humans developed the first stone tools and gradually migrated out of Africa, spreading across the globe. Over time, they adapted to various environments, creating distinct cultures and ways of life.</p><br/>
+                    <br/>
+                    
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
