--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <br/>
                     <p>Prehistoric Times</p>
                     <br/>
-                    <p>The history of humanity is a vast and complex narrative that spans thousands of years, encompassing the rise and fall of civilizations, advancements in technology, political shifts, cultural transformations, and countless human experiences. From the earliest known records, the journey of humankind is marked by both struggle and progress, as societies have evolved from primitive hunter-gatherer communities to the interconnected global civilization we know today.<p/>
+                    <p>The history of humanity is a vast and complex narrative that spans thousands of years, encompassing the rise and fall of civilizations, advancements in technology, political shifts, cultural transformations, and countless human experiences. From the earliest known records, the journey of humankind is marked by both struggle and progress, as societies have evolved from primitive hunter-gatherer communities to the interconnected global civilization as we know today.<p/>
                     <br/>
                     <p>The Agricultural Revolution</p>
                     <br/>
