--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                         <li> <a href="#">Log in</a></li>
                     </ul>
                 </nav>
+                <div class="header-text">
+                    <h6>Mission</h6>
+                        <p>Empowerment of the Barangay Centro 02 with desirable knowledge,<br/> attributes and relevant values that will able to be innovatively and improving the quality of life of the constituents.</p>                    
+                    <h6>Vision</h6>
+                        <p>Barangay Zone II will be empowered and transformed into a productive,<br/> self-reliant, responsive, humane and upright to contribute for the betterment of the community.</p>
+                </div>
             </div>
         </div>
 
@@ -65,8 +71,7 @@
             <div class="row">
                 <div class="prom-col-1">
                     <h4>Tourist Attraction</h4>
-                    <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                </div>
+                    <img src="Images/tourist1.jpg" alt=""></div>
                 <div class="prom-col-2">
                     <h4 class="sub-title">History</h4>
                     <br/>
@@ -79,6 +84,24 @@
                     <p>The story begins in prehistory, a time before written records, where early humans survived through hunting, gathering, and simple tool-making. Archaeological evidence suggests that Homo sapiens, our direct ancestors, first appeared in Africa over 300,000 years ago. During the Paleolithic era, early humans developed the first stone tools and gradually migrated out of Africa, spreading across the globe. Over time, they adapted to various environments, creating distinct cultures and ways of life.</p><br/>
                     <br/>
                     
+                </div>
+            </div>
+        </div>
+
+        <div id="footer">
+                <div class="row">
+                    <div class="foot-col-1">
+                        <h5>Contact Us</h5>
+                        <p><i class="fa-solid fa-square-phone"></i>(143) 123-6789</p>
+                        <p><i class="fa-solid fa-square-phone"></i>09123456789</p>
+                        <p>Centro 02, Sorsogon City</p>
+                        <p></i>abcd@gmail.com</p>
+                    </div>
+                    <div class="foot-col-2">
+                        <h5>Barangay Centro 02</h5>
+                        <p class="quote">Barangay Centro will be empowered and transformed into a productive,<br/> self-reliant, responsive, humane and upright to contribute for the betterment of the community.</p>
+                        <img src="Images/brgypic.jpg" class="brgypic"/>
+                    </div>
                 </div>
             </div>
         </div>
