--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                 <nav>
                  <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="logo"/>
                     <ul>
-                        <li> <a href="#">Home</a></li>
-                        <li> <a href="#">About Us</a></li>
-                        <li> <a href="#">Services</a></li>
-                        <li> <a href="#">Contact</a></li>
-                        <li> <a href="#">Log in</a></li>
+                        <li> <a href="#header">Home</a></li>
+                        <li> <a href="#officials">Barangay Officials</a></li>
+                        <li> <a href="#promotion">Place to Visit</a></li>
+                        <li> <a href="#footer">Contact Us</a></li>
+                        <li> <a href="#">Announcement</a></li>
                     </ul>
                 </nav>
                 <div class="header-text">
@@ -28,44 +28,45 @@
                 </div>
             </div>
         </div>
+        <div id="officials">
+            <div class="wrapper">
+                <h1>Barangay Officials</h1>
+                <img class="img-cpt" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                <h2>Carlo Jaynario</h2>
+                <h3>Punong Barangay</h3>
+            </div>
 
-        <div class="wrapper">
-            <h1>Barangay Officials</h1>
-            <img class="img-cpt" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-            <h2>Carlo Jaynario</h2>
-            <h3>Punong Barangay</h3>
-        </div>
+            <div class="wrapper-2"> 
+                <ul>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
+                        <h3>Brayan</h3>
+                        <p>SB Member</p></li>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
+                        <h3>Salyn</h3>
+                        <p>SB Member</p></li>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
+                        <h3>Jason</h3>
+                        <p>SB Member</p></li>
+                </ul>
+            </div>  
 
-        <div class="wrapper-2"> 
-            <ul>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Brayan</h3>
-                    <p>SB Member</p></li>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Salyn</h3>
-                    <p>SB Member</p></li>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Jason</h3>
-                    <p>SB Member</p></li>
-            </ul>
-        </div>  
-
-        <div class="wrapper-3"> 
-            <ul>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Abel</h3>
-                    <p>SB Member</p></li>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Ken</h3>
-                    <p>SB Member</p></li>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Kevin</h3>
-                    <p>SB Member</p></li>
-                <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                    <h3>Lans</h3>
-                    <p>SB Member</p></li>
-            </ul>
-        </div>
+            <div class="wrapper-3"> 
+                <ul>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                        <h3>Abel</h3>
+                        <p>SB Member</p></li>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                        <h3>Ken</h3>
+                        <p>SB Member</p></li>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                        <h3>Kevin</h3>
+                        <p>SB Member</p></li>
+                    <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
+                        <h3>Lans</h3>
+                        <p>SB Member</p></li>
+                </ul>
+            </div>
+        </div>        
 
         <div id="promotion">
             <div class="row">
@@ -92,10 +93,10 @@
                 <div class="row">
                     <div class="foot-col-1">
                         <h5>Contact Us</h5>
-                        <p><i class="fa-solid fa-square-phone"></i>(143) 123-6789</p>
-                        <p><i class="fa-solid fa-square-phone"></i>09123456789</p>
+                        <p>(143) 123-6789</p>
+                        <p></i>09123456789</p>
                         <p>Centro 02, Sorsogon City</p>
-                        <p></i>abcd@gmail.com</p>
+                        <p>abcd@gmail.com</p>
                     </div>
                     <div class="foot-col-2">
                         <h5>Barangay Centro 02</h5>
