--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                 <img src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" class="logo"/>
+                 <img src="Images/logo.png" class="logo"/>
                     <ul>
                         <li> <a href="#header">Home</a></li>
                         <li> <a href="#officials">Barangay Officials</a></li>
@@ -22,9 +22,99 @@
                 </nav>
                 <div class="header-text">
                     <h6>Mission</h6>
-                        <p>Empowerment of the Barangay Centro 02 with desirable knowledge,<br/> attributes and relevant values that will able to be innovatively and improving the quality of life of the constituents.</p>                    
+                        <p>To provide satisfactory services through democratic leadership that would enble the people to become politically responsible, morally upright and economically capable</p>                    
                     <h6>Vision</h6>
-                        <p>Barangay Zone II will be empowered and transformed into a productive,<br/> self-reliant, responsive, humane and upright to contribute for the betterment of the community.</p>
+                        <p>Centro 2: An exemplar Barangay with unified, diciplined and God Loving Constituents towards Prosperity</p>
+                            <table>
+                                <caption>CITIZENS CHARTER</caption>
+                                <tr>
+                                    <th>Frontline Services</th>
+                                    <th>Step / Procedures</th>
+                                    <th>Responsible Person</th>
+                                    <th>Maximum<br/>Response Time</th>
+                                    <th>Requirements</th>
+                                    <th>Amount of Fees</th>
+                                </tr>
+                                <tr>
+                                    <td>Issuance of Clearance and Certificates (CTC)</td>
+                                    <td>
+                                            <li>Filling-up of Request Slip</li>
+                                            <li>Receiving/Recording of request</li>
+                                            <li>Processing/Issuance of document</li>
+                                    </td>
+                                    <td>Officer of the Day: Jene Lea T. Aurelio (Barangay Secretary) Donalyn T. Tamayo (Barangay Treasurer)</td>
+                                    <td>
+                                            <li>3 minutes</li>
+                                            <li>2 minutes</li>
+                                            <li>5 minutes</li>
+                                    </td>
+                                    <td>None</td>
+                                    <td>P5.00 Basic Tax</td>
+                                </tr>
+                                <tr>
+                                    <td>Issuance of Clearances and Certifications</td>
+                                    <td>
+                                        <li>Filling-up of Request Slip</li>
+                                        <li>Receiving/Recording of request</li>
+                                        <li>Processing/Issuance of document</li>
+                                    </td>
+                                    <td>Officer of the Day: Jene Lea T. Aurelio<br/>Donalyn T. Tamayo</td>
+                                    <td>15 minutes total</td>
+                                    <td>CTC</td>
+                                    <td>P100.00 - P200.00</td>
+                                </tr>
+                                <tr>
+                                    <td>FILING OF SUMMONS</td>
+                                    <td>
+                                        <li>Filling-out of Complaint Form.</li>
+                                        <li>Recording of Complaint on the recordbook.</li>
+                                        <li>Paying of fees</li>
+                                        <li>Scheduling of hearing</li>
+                                    </td>
+                                    <td>Officer of the Day<br/>Jeine Lea T. Aurelio (Barangay Secretary)<br/>Donalyn M. Tamayao (Barangay Treasurer)<br/> Camilo P. Perdido (Punong Barangay)</td>
+                                    <td>10 minutes<br/>2 minutes<br/>3 minutes<br/>5 minutes<br/>(Total 20 minutes)</td>
+                                    <td>CTC</td>
+                                    <td>P100.00</td>
+                                </tr>
+                                <tr>
+                                    <td>ISSUANCE OF PERMIT</td>
+                                    <td>
+                                        <li>Filling-out of Request Slip</li>
+                                        <li>Receiving/Recording of request.</li>
+                                        <li>Processing of request permit</li>
+                                        <li>Paying of fees.</li>
+                                        <li>Approving/Issuing of request document.</li>
+                                    </td>
+                                    <td>Officer of the Day<br/>Jeine Lea T. Aurelio (Barangay Secretary)<br/>Donalyn M. Tamayao (Barangay Treasurer)<br/> Camilo P. Perdido (Punong Barangay)</td>
+                                    <td>3 minutes<br/>2 minutes<br/>12 minutes<br/>3 minutes<br/>10 minutes<br/>(Total 20 minutes)</td>
+                                    <td>CTC and Barangay Clearance</td>
+                                    <td>
+                                        <li>Barangay Clearance</li>
+                                        <li>Barangay Certificates</li>
+                                        <li>Business Clearance</li>
+                                        <li>Transport Clearance Certificate</li>
+                                        <li>a. Large cattle</li>
+                                        <li>b. Piglets Head</li>
+                                        <li>c. Coco Lumber</li>
+                                        <li>d. Palma Brava leaves</li>
+                                        <li>e. Old New furniture</li>
+                                        <li>f. Demolition Retrieve Wooden Materials</li>
+                                        <li>Gymnassium rent</li>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>HEALTH SERVICES</td>
+                                    <td>
+                                        <li>Filling-up of Request Slip.</li>
+                                        <li>Evaluating of request.</li>
+                                        <li>Check-up (If it needs medical attention)</li>
+                                    </td>
+                                    <td> Barangay Health Workers<br/>Julie Grace L. Torida (Midwife)</td>
+                                    <td>5 minutes<br/>5 minutes<br/>20 minutes<br/>(Total 30 minutes)</td>
+                                    <td>CTC</td>
+                                    <td>FREE</td>
+                                </tr>
+                            </table>
                 </div>
             </div>
         </div>
@@ -32,20 +122,20 @@
             <div class="wrapper">
                 <h1>Barangay Officials</h1>
                 <img class="img-cpt" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                <h2>Carlo Jaynario</h2>
+                <h2>Camilo P. Perdido</h2>
                 <h3>Punong Barangay</h3>
             </div>
 
             <div class="wrapper-2"> 
                 <ul>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
-                        <h3>Brayan</h3>
+                        <h3>Estrelita C. Estabillo</h3>
                         <p>SB Member</p></li>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
-                        <h3>Salyn</h3>
+                        <h3>Vicky C. Fuertes</h3>
                         <p>SB Member</p></li>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2">
-                        <h3>Jason</h3>
+                        <h3>Recto S. Obispo</h3>
                         <p>SB Member</p></li>
                 </ul>
             </div>  
@@ -53,16 +143,16 @@
             <div class="wrapper-3"> 
                 <ul>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                        <h3>Abel</h3>
+                        <h3>Andrew L. Pagayatan</h3>
                         <p>SB Member</p></li>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                        <h3>Ken</h3>
+                        <h3>Almie Joy D. Cabuyadao</h3>
                         <p>SB Member</p></li>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                        <h3>Kevin</h3>
+                        <h3>Darwin R. Callangan</h3>
                         <p>SB Member</p></li>
                     <li><img class="img-kagawad" src="https://via.placeholder.com/400x300.png?text=Cartoon+Image+2" alt="">
-                        <h3>Lans</h3>
+                        <h3>Alfonso S. Grande Jr.</h3>
                         <p>SB Member</p></li>
                 </ul>
             </div>
@@ -100,7 +190,7 @@
                     </div>
                     <div class="foot-col-2">
                         <h5>Barangay Centro 02</h5>
-                        <p class="quote">Barangay Centro will be empowered and transformed into a productive,<br/> self-reliant, responsive, humane and upright to contribute for the betterment of the community.</p>
+                        <p class="quote">To provide satisfactory services through democratic leadership that would enble the people to become politically responsible, morally upright and economically capable</p>
                         <img src="Images/brgypic.jpg" class="brgypic"/>
                     </div>
                 </div>
